Added get, add and get collection on category endpoints Added get, add and get collection on item endpoints Changed and moved category dto Changed and moved item dto Split item dto between ItemDTO and ItemEditDTO Added RandomIdentifierGenerator Added category service Added item service Populated category entity Populated item entity Added DTOMapper annotation to define mapper services Added DTOEntityMapper to lighten dto mappers Added category mapper for dto Added item mapper for dto Added URIMapper to lighten services Added URIMapperStore